--- a/pages/program.html
+++ b/pages/program.html
@@ -6,7 +6,7 @@
 
     ## Monday, October 10, 2022
 
-    ### Keynote: Dr. Fred Chong
+    ### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL, USA
 
     Fred Chong is the Seymour Goodman Professor in the Department of
     Computer Science at the University of Chicago and the Chief Scientist
@@ -46,7 +46,7 @@
 
     ## Tuesday, October 11, 2022
 
-    ### Keynote: Dr. Massimiliano Di Ventra
+    ### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA 92093-0319 USA
 
     Massimiliano Di Ventra obtained his undergraduate degree in Physics
     summa cum laude from the University of Trieste (Italy) in 1991 and
@@ -89,7 +89,7 @@
 
     ## Wednesday, October 12, 2022
 
-    ### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktowhn Heights, NY, 10598-0218, USA
+    ### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY, 10598-0218, USA
 
     (Other talks to be announced)
 
