--- a/pages/program.html
+++ b/pages/program.html
@@ -6,7 +6,7 @@
 
     ## Monday, October 10, 2022
 
-    ### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL, USA
+    #### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL, USA
 
     Fred Chong is the Seymour Goodman Professor in the Department of
     Computer Science at the University of Chicago and the Chief Scientist
@@ -24,7 +24,7 @@
     at UCSB from 2005-2015. He is a recipient of the NSF CAREER award,
     the Intel Outstanding Researcher Award, and 13 best paper awards.
 
-    Keynote Talk: Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design
+    **Keynote Talk - Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design**
 
     Quantum computing is at an inflection point, where 127-qubit
     machines are deployed, and 1000-qubit machines are perhaps only a
@@ -46,7 +46,7 @@
 
     ## Tuesday, October 11, 2022
 
-    ### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA 92093-0319 USA
+    #### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA 92093-0319 USA
 
     Massimiliano Di Ventra obtained his undergraduate degree in Physics
     summa cum laude from the University of Trieste (Italy) in 1991 and
@@ -64,7 +64,7 @@
     Nanotechnology Council Distinguished Lecturer. He is the co-founder
     of MemComputing, Inc. (http://memcpu.com/).
 
-    Keynote Talk - MemComputing: Fundamentals and Applications
+    **Keynote Talk - MemComputing: Fundamentals and Applications**
 
     MemComputing is a new physics-based approach to computation that
     employs time non-locality (memory) to both process and store
@@ -89,7 +89,7 @@
 
     ## Wednesday, October 12, 2022
 
-    ### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY, 10598-0218, USA
+    #### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY, 10598-0218, USA
 
     (Other talks to be announced)
 
