--- a/pages/program.html
+++ b/pages/program.html
@@ -49,7 +49,7 @@
     #### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA 92093-0319 USA
 
     Massimiliano Di Ventra obtained his undergraduate degree in Physics
-    summa cum laude from the University of Trieste (Italy) in 1991 and
+    *summa cum laude* from the University of Trieste (Italy) in 1991 and
     did his PhD studies at the Swiss Federal Institute of Technology
     in Lausanne in 1993-1997. He is now professor of Physics at the
     University of California, San Diego. Di Ventra's research interests
@@ -66,24 +66,25 @@
 
     **Keynote Talk - MemComputing: Fundamentals and Applications**
 
-    MemComputing is a new physics-based approach to computation that
-    employs time non-locality (memory) to both process and store
-    information on the same physical location [1]. Its digital version
-    is designed to solve combinatorial optimization problems. A
-    practical realization of digital memcomputing machines (DMMs)
-    can be accomplished via circuits of non-linear dynamical systems
-    with memory engineered so that periodic orbits and chaos can be
-    avoided. A given logic (or algebraic) problem is first mapped into
-    this type of dynamical system whose point attractors represent the
-    solutions of the original problem. A DMM then finds the solution
-    via a succession of elementary avalanches (instantons) whose role
-    is to eliminate configurations of logical inconsistency ("logical
-    defects") from the circuit. I will discuss the physics behind
-    MemComputing and show many examples of its applicability to various
-    combinatorial optimization problems, Machine Learning, and Quantum
-    Mechanics, demonstrating its advantages over traditional approaches
-    and even quantum computing. Work supported by DARPA, DOE, NSF, CMRR,
-    and MemComputing, Inc. (http://memcpu.com/).
+    MemComputing is a new physics-based approach to computation
+    that employs *time non-locality* (memory) to both process and
+    store information on the same physical location. (M. Di Ventra,
+    *MemComputing: Fundamentals and Applications*, Oxford University
+    Press, 2022.) Its digital version is designed to solve combinatorial
+    optimization problems. A practical realization of digital memcomputing
+    machines (DMMs) can be accomplished via circuits of non-linear
+    dynamical systems with memory engineered so that periodic orbits and
+    chaos can be avoided. A given logic (or algebraic) problem is first
+    mapped into this type of dynamical system whose point attractors
+    represent the solutions of the original problem. A DMM then finds
+    the solution via a succession of elementary avalanches (instantons)
+    whose role is to eliminate configurations of logical inconsistency
+    ("logical defects") from the circuit. I will discuss the physics
+    behind MemComputing and show many examples of its applicability
+    to various combinatorial optimization problems, Machine Learning,
+    and Quantum Mechanics, demonstrating its advantages over traditional
+    approaches and even quantum computing. Work supported by DARPA, DOE,
+    NSF, CMRR, and MemComputing, Inc. (http://memcpu.com/).
 
     (Other talks to be announced)
 
