--- a/pages/program.html
+++ b/pages/program.html
@@ -62,7 +62,7 @@
     Cited Researcher by Clarivate Analytics, he is the recipient of the
     2020 Feynman Prize for theory in Nanotechnology, and is a 2022 IEEE
     Nanotechnology Council Distinguished Lecturer. He is the co-founder
-    of MemComputing, Inc. (http://memcpu.com/).
+    of [MemComputing, Inc](http://memcpu.com/).
 
     **Keynote Talk - MemComputing: Fundamentals and Applications**
 
