--- a/pages/program.html
+++ b/pages/program.html
@@ -6,7 +6,7 @@
 
     ## Monday, October 10, 2022
 
-    #### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL, USA
+    #### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL 60637-1468, USA
 
     Fred Chong is the Seymour Goodman Professor in the Department of
     Computer Science at the University of Chicago and the Chief Scientist
@@ -46,7 +46,7 @@
 
     ## Tuesday, October 11, 2022
 
-    #### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA 92093-0319 USA
+    #### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA, 92093-0319, USA
 
     Massimiliano Di Ventra obtained his undergraduate degree in Physics
     *summa cum laude* from the University of Trieste (Italy) in 1991 and
@@ -84,7 +84,7 @@
     to various combinatorial optimization problems, Machine Learning,
     and Quantum Mechanics, demonstrating its advantages over traditional
     approaches and even quantum computing. Work supported by DARPA, DOE,
-    NSF, CMRR, and MemComputing, Inc. (http://memcpu.com/).
+    NSF, CMRR, and [MemComputing, Inc](http://memcpu.com/).
 
     (Other talks to be announced)
 
