--- a/pages/program.html
+++ b/pages/program.html
@@ -6,7 +6,7 @@
 
     ## Monday, October 10, 2022
 
-    #### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL 60637-1468, USA
+    #### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL, 60637-1468, USA
 
     Fred Chong is the Seymour Goodman Professor in the Department of
     Computer Science at the University of Chicago and the Chief Scientist
