Make call for posters a bit more prominent

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,9 +28,9 @@
       </p>
 
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a href="submit.html" class="btn btn-primary btn-lg px-4 me-md-2">For Authors</a>
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
-        <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">For Attendees</a>
+        <a href="#call-for-posters" class="btn btn-primary btn-lg px-4 me-md-2">Submit a Poster</a>
+        <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">Attend</a>
       </div>
     </div>
   </div>
@@ -57,6 +57,8 @@
     * **Mar 6, 2022:** The call for workshops and tutorials is now posted.
       See the [workshops/tutorials page](workshops.html).
     * **Jan 27, 2022:** PACT 2022 is on! The call for papers is below.
+
+    <a name="call-for-posters">
 
     {% filter indent(4) -%}
     {% include "posters.md" %}
