--- a/pages/program.html
+++ b/pages/program.html
@@ -92,6 +92,41 @@
 
     #### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY, 10598-0218, USA
 
+    Viji Srinivasan is a Distinguished Research Staff Member and a
+    manager of the accelerator architectures and compilers group at
+    the IBM T.J. Watson Research Center in Yorktown Heights. At IBM,
+    she has worked on various aspects of data management including
+    energy-efficient processor designs, microarchitecture of the memory
+    hierarchies of large-scale servers, cache coherence management
+    of symmetric multiprocessors, accelerators for data analytics
+    applications and more recently end-to-end accelerator solutions for
+    AI. Many of her research contributions have been incorporated into
+    IBM?s Power and System-z Enterprise-class servers.
+
+    **Keynote Talk - AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software**
+
+    The combination of growth in compute capabilities and availability
+    of large datasets has led to a re-birth of deep learning. Deep Neural
+    Networks (DNNs) have become state-of-the-art in a variety of machine
+    learning tasks spanning domains across vision, speech, and machine
+    translation. Deep Learning (DL) achieves high accuracy in these
+    tasks at the expense of 100s of ExaOps of computation. Hardware
+    specialization and acceleration is a key enabler to improve
+    operational efficiency of DNNs, in turn requiring synergistic
+    cross-layer design across algorithms, hardware, and software.
+
+    In this talk I will present this holistic approach adopted in the
+    design of a multi-TOPs AI hardware accelerator. Key advances in
+    the AI algorithm/application-level exploiting approximate computing
+    techniques enable deriving low-precision DNNs models that maintain
+    the same level of accuracy. Hardware performance-aware design space
+    exploration is critical during compilation to map DNNs with diverse
+    computational characteristics systematically and optimally while
+    preserving familiar programming and user interfaces. The opportunities
+    to co-optimize the algorithms, hardware, and the software provides
+    the roadmap to continue to deliver superior performance over the
+    next decade.
+
     (Other talks to be announced)
 
   {% endfilter %}
