Add headshots to keynotes page, tweak formatting

--- a/pages/program.html
+++ b/pages/program.html
@@ -6,25 +6,9 @@
 
     ## Monday, October 10, 2022
 
-    #### Keynote: Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL, 60637-1468, USA
+    #### Keynote: Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design
 
-    Fred Chong is the Seymour Goodman Professor in the Department of
-    Computer Science at the University of Chicago and the Chief Scientist
-    for Quantum Software at ColdQuanta. He is also Lead Principal
-    Investigator for the EPiQC Project (Enabling Practical-scale Quantum
-    Computing), an NSF Expedition in Computing. Chong is a member of the
-    National Quantum Advisory Committee (NQIAC) which provides advice
-    to the President and Secretary of Energy on the National Quantum
-    Initiative Program. In 2020, he co-founded Super.tech, a quantum
-    software company, which was acquired by ColdQuanta in 2022. Chong
-    received his Ph.D. from MIT in 1996 and was a faculty member and
-    Chancellor's fellow at UC Davis from 1997-2005. He was also a
-    Professor of Computer Science, Director of Computer Engineering,
-    and Director of the Greenscale Center for Energy-Efficient Computing
-    at UCSB from 2005-2015. He is a recipient of the NSF CAREER award,
-    the Intel Outstanding Researcher Award, and 13 best paper awards.
-
-    **Keynote Talk - Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design**
+    **Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL**
 
     Quantum computing is at an inflection point, where 127-qubit
     machines are deployed, and 1000-qubit machines are perhaps only a
@@ -42,29 +26,31 @@
     2.5D architectures for surface codes, and exploiting long-distance
     communication and tolerating atom loss in neutral-atom machines.
 
+    > ![Fred Chong](images-generated/headshot-chong.jpg)
+    >
+    > Fred Chong is the Seymour Goodman Professor in the Department of
+    > Computer Science at the University of Chicago and the Chief Scientist
+    > for Quantum Software at ColdQuanta. He is also Lead Principal
+    > Investigator for the EPiQC Project (Enabling Practical-scale Quantum
+    > Computing), an NSF Expedition in Computing. Chong is a member of the
+    > National Quantum Advisory Committee (NQIAC) which provides advice
+    > to the President and Secretary of Energy on the National Quantum
+    > Initiative Program. In 2020, he co-founded Super.tech, a quantum
+    > software company, which was acquired by ColdQuanta in 2022. Chong
+    > received his Ph.D. from MIT in 1996 and was a faculty member and
+    > Chancellor's fellow at UC Davis from 1997-2005. He was also a
+    > Professor of Computer Science, Director of Computer Engineering,
+    > and Director of the Greenscale Center for Energy-Efficient Computing
+    > at UCSB from 2005-2015. He is a recipient of the NSF CAREER award,
+    > the Intel Outstanding Researcher Award, and 13 best paper awards.
+
     (Other talks to be announced)
 
     ## Tuesday, October 11, 2022
 
-    #### Keynote: Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA, 92093-0319, USA
+    #### Keynote: MemComputing: Fundamentals and Applications
 
-    Massimiliano Di Ventra obtained his undergraduate degree in Physics
-    *summa cum laude* from the University of Trieste (Italy) in 1991 and
-    did his PhD studies at the Swiss Federal Institute of Technology
-    in Lausanne in 1993-1997. He is now professor of Physics at the
-    University of California, San Diego. Di Ventra's research interests
-    are in condensed-matter theory and unconventional computing. He
-    has been invited to deliver more than 300 talks worldwide on these
-    topics. He has published more than 200 papers in refereed journals,
-    4 textbooks, and has 7 granted patents (3 foreign). He is a fellow
-    of the IEEE, the American Physical Society, the Institute of Physics,
-    and a foreign member of Academia Europaea. In 2018 he was named Highly
-    Cited Researcher by Clarivate Analytics, he is the recipient of the
-    2020 Feynman Prize for theory in Nanotechnology, and is a 2022 IEEE
-    Nanotechnology Council Distinguished Lecturer. He is the co-founder
-    of [MemComputing, Inc](http://memcpu.com/).
-
-    **Keynote Talk - MemComputing: Fundamentals and Applications**
+    **Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA**
 
     MemComputing is a new physics-based approach to computation
     that employs *time non-locality* (memory) to both process and
@@ -86,24 +72,31 @@
     approaches and even quantum computing. Work supported by DARPA, DOE,
     NSF, CMRR, and [MemComputing, Inc](http://memcpu.com/).
 
+    > ![Massimiliano Di Ventra](images-generated/headshot-diventra.jpg)
+    >
+    > Massimiliano Di Ventra obtained his undergraduate degree in Physics
+    > *summa cum laude* from the University of Trieste (Italy) in 1991 and
+    > did his PhD studies at the Swiss Federal Institute of Technology
+    > in Lausanne in 1993-1997. He is now professor of Physics at the
+    > University of California, San Diego. Di Ventra's research interests
+    > are in condensed-matter theory and unconventional computing. He
+    > has been invited to deliver more than 300 talks worldwide on these
+    > topics. He has published more than 200 papers in refereed journals,
+    > 4 textbooks, and has 7 granted patents (3 foreign). He is a fellow
+    > of the IEEE, the American Physical Society, the Institute of Physics,
+    > and a foreign member of Academia Europaea. In 2018 he was named Highly
+    > Cited Researcher by Clarivate Analytics, he is the recipient of the
+    > 2020 Feynman Prize for theory in Nanotechnology, and is a 2022 IEEE
+    > Nanotechnology Council Distinguished Lecturer. He is the co-founder
+    > of [MemComputing, Inc](http://memcpu.com/).
+
     (Other talks to be announced)
 
     ## Wednesday, October 12, 2022
 
-    #### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY, 10598-0218, USA
+    #### Keynote: AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software
 
-    Viji Srinivasan is a Distinguished Research Staff Member and a
-    manager of the accelerator architectures and compilers group at
-    the IBM T.J. Watson Research Center in Yorktown Heights. At IBM,
-    she has worked on various aspects of data management including
-    energy-efficient processor designs, microarchitecture of the memory
-    hierarchies of large-scale servers, cache coherence management
-    of symmetric multiprocessors, accelerators for data analytics
-    applications and more recently end-to-end accelerator solutions for
-    AI. Many of her research contributions have been incorporated into
-    IBM?s Power and System-z Enterprise-class servers.
-
-    **Keynote Talk - AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software**
+    **Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY**
 
     The combination of growth in compute capabilities and availability
     of large datasets has led to a re-birth of deep learning. Deep Neural
@@ -127,7 +120,18 @@
     the roadmap to continue to deliver superior performance over the
     next decade.
 
-    (Other talks to be announced)
+    > ![Vijayalakshmi Srinivasan](images-generated/headshot-srinivasan.jpg)
+    >
+    > Viji Srinivasan is a Distinguished Research Staff Member and a
+    > manager of the accelerator architectures and compilers group at
+    > the IBM T.J. Watson Research Center in Yorktown Heights. At IBM,
+    > she has worked on various aspects of data management including
+    > energy-efficient processor designs, microarchitecture of the memory
+    > hierarchies of large-scale servers, cache coherence management
+    > of symmetric multiprocessors, accelerators for data analytics
+    > applications and more recently end-to-end accelerator solutions for
+    > AI. Many of her research contributions have been incorporated into
+    > IBM's Power and System-z Enterprise-class servers.
 
   {% endfilter %}
 {% endblock %}
