Add poster submission link

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
 
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
-        <a href="#call-for-posters" class="btn btn-primary btn-lg px-4 me-md-2">Submit a Poster</a>
+        <a href="https://easychair.org/my/conference?conf=pact2022postersessio" class="btn btn-primary btn-lg px-4 me-md-2">Submit a Poster</a>
         <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">Attend</a>
       </div>
     </div>
