--- a/pages/organization.html
+++ b/pages/organization.html
@@ -26,7 +26,7 @@
     [Saugata Ghose](https://ghose.cs.illinois.edu/), U. Illinois
 
     **Artifact Evaluation Committee Chair:**<br>
-    TBA
+    [Sven-Bodo Scholz](https://www.ru.nl/en/people/scholz-s), Radboud U.
 
     ## Steering Committee
 
