Announce rough tutorial/workshop schedule

--- a/pages/program.html
+++ b/pages/program.html
@@ -4,11 +4,55 @@
   {% filter markdown %}
     # Program
 
+    ## Saturday, October 8, 2022
+
+    ##### Tutorial: Memory-Centric Computing
+
+    - **Onur Mutlu** (ETH Zurich)
+
+    ##### Tutorial: Boosting Productivity and Applications Performance on Parallel Distributed Systems with the SHAD C++ Library
+
+    - **Vito Giovanni Castellana** (Pacific Northwest National Laboratory, Richland, WA)
+    - **Marco Minutoli** (Pacific Northwest National Laboratory, Richland, WA)
+    - **John Feo** (Pacific Northwest National Laboratory, Richland, WA)
+
+    ##### Tutorial: NVMExplorer: A Framework for Cross-Stack Comparisons of Embedded Non-Volatile Memory Solutions
+
+    - **Lilian Pentecost** (Harvard)
+    - **Alexander Hankin** (Harvard)
+    - **Marco Donato** (Harvard)
+    - **Mark Hempstead** (Harvard)
+    - **Gu-Yeon Wei** (Harvard)
+    - **David Brooks** (Harvard)
+
+    ## Sunday, October 9, 2022
+
+    ##### Workshop: NextPIM --- Evolution of PIM for Next-Generation Computing
+
+    - **Karthik Swaminathan** (IBM Research)
+    - **Saransh Gupta** (IBM Research)
+    - **Vijaykrishnan Narayanan** (Penn State University)
+
+    See the [workshop page](https://nextpim.github.io/2022/) for more information.
+
+    ##### Tutorial: SODA Synthesizer: Accelerating Data Science Applications with an end-to-end Silicon Compiler
+
+    - **Nicolas Bohm Agostini**
+    - **Serena Curzel**
+    - **Michele Fiorito**
+    - **Vito Giovanni Castellana**
+    - **Fabrizio Ferrandi**
+    - **Antonino Tumeo**
+
+    ##### Tutorial: SYCL for heterogenous computing: updates, experience, and feedback
+
+    - **Zheming Jin** (ORNL)
+
     ## Monday, October 10, 2022
 
-    #### Keynote: Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design
+    ### Keynote: Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design
 
-    **Dr. Fred Chong, Department of Computer Science, University of Chicago, Chicago, IL**
+    **Fred Chong** (Department of Computer Science, University of Chicago, Chicago, IL)
 
     Quantum computing is at an inflection point, where 127-qubit
     machines are deployed, and 1000-qubit machines are perhaps only a
@@ -50,7 +94,7 @@
 
     #### Keynote: MemComputing: Fundamentals and Applications
 
-    **Dr. Massimiliano Di Ventra, Department of Physics, University of California San Diego, La Jolla, CA**
+    **Massimiliano Di Ventra** (Department of Physics, University of California San Diego, La Jolla, CA)
 
     MemComputing is a new physics-based approach to computation
     that employs *time non-locality* (memory) to both process and
@@ -96,7 +140,7 @@
 
     #### Keynote: AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software
 
-    **Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktown Heights, NY**
+    **Vijayalakshmi Srinivasan** (IBM Research, Yorktown Heights, NY)
 
     The combination of growth in compute capabilities and availability
     of large datasets has led to a re-birth of deep learning. Deep Neural
