--- a/pages/index.html
+++ b/pages/index.html
@@ -40,6 +40,9 @@
   {% filter markdown %}
     # News
 
+    * **August 16, 2022:** We are excited to announce the
+      tutorials and workshops that will precede the main conference at PACT this
+      year. See the [program](program.html) for details.
     * **August 16, 2022:** We are excited to announce the keynote speakers who
       will headline the technical program for PACT each day. See the
       [program](program.html) for details.
