--- a/pages/src.html
+++ b/pages/src.html
@@ -10,7 +10,7 @@
 
     - Extended Abstracts (800 words max; see full guidelines below)
         - Due **September 1, 2022** (AoE: UTC-12)
-        - Submission Link: *coming soon*
+        - [Submission Site](https://pact22src.hotcrp.com/)
     - Notification: September 15, 2022
     - SRC Poster Session: October 11, 2022
     - SRC Finalist Presentation: October 12, 2022
@@ -36,8 +36,8 @@
     The poster sessions and finalist presentations will also consider the
     quality of both visual and oral presentation.
 
-    All authors of accepted abstracts will receive a
-    **registration discount** (of US $300) to help offset costs of
+    All authors of accepted abstracts will receive
+    **free conference registration** to help offset costs of
     attendance.
     **Students must attend PACT 2022 in person** to take part in the poster
     session and finalist presentation.
@@ -72,8 +72,8 @@
     ### Extended Abstract Guidelines
 
     - Extended abstracts for the PACT 2022 ACM Student Research Competition
-      must be submitted electronically at the SRC submission site
-      (*coming soon*) no later than September 1, 2022 (AoE).
+      must be submitted electronically at the [SRC submission site](https://pact22src.hotcrp.com/)
+      no later than September 1, 2022 (AoE).
     - **Submissions should not exceed 1 page, and should not exceed 800 words.**
       Figures and references are allowed, but must fit within the single
       page.
