Better promote the SRC submission site

--- a/pages/src.html
+++ b/pages/src.html
@@ -5,6 +5,7 @@
 
     # ACM Student Research Competition (SRC)
 
+    <a href="https://pact22src.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit to the SRC &raquo;</a>
 
     ## Important Dates & Links
 
