--- a/pages/index.html
+++ b/pages/index.html
@@ -40,6 +40,8 @@
   {% filter markdown %}
     # News
 
+    * **August 17, 2022:** Submission for the ACM Student Research Competition
+      (SRC) at PACT is now open. See the [SRC page](src.html) for further information. 
     * **August 16, 2022:** We are excited to announce the
       tutorials and workshops that will precede the main conference at PACT this
       year. See the [program](program.html) for details.
