--- a/pages/attend.html
+++ b/pages/attend.html
@@ -9,5 +9,17 @@
     ## Cancellation Policy
 
     (to be announced)
+
+    ## Hotel Bookings
+
+    At this moment, there is no specific hotel block for PACT. We recommend
+    using booking portals such as [Booking.com](https://booking.com),
+    [Hotels.com](https://hotels.com), [Hotwire](https://hotwire.com),
+    [Expedia](https://expedia.com) or [Priceline](https://priceline.com), etc.
+
+    It is useful to note that the Chicago Marathon takes place on October 9,
+    the Sunday before the main conference. **IMPORTANT:** It may be
+    advantageous to book the night from October 9 to October 10 separately from
+    the remainder of the stay.
   {% endfilter %}
 {% endblock %}
