--- a/pages/index.html
+++ b/pages/index.html
@@ -40,6 +40,10 @@
   {% filter markdown %}
     # News
 
+    * **August 24, 2022:** Given that October 9 is the day of the
+      Chicago Marathon, hotel bookings may be expensive.
+      See the [attendance page](attend.html) for advice on
+      booking cost.
     * **August 17, 2022:** Submission for the ACM Student Research Competition
       (SRC) at PACT is now open. See the [SRC page](src.html) for further information. 
     * **August 16, 2022:** We are excited to announce the
