Update NVMExplorer tut affiliations

--- a/pages/program.html
+++ b/pages/program.html
@@ -69,15 +69,14 @@
     and algorithms.  We then propose an interactive hands-on session, with
     coding exercises covering the different components of the software, from
     the tasking API up to the STL algorithms and Data Structures layer.
-
     The SHAD library is available at <https://github.com/pnnl/SHAD>.
 
     ##### Tutorial: NVMExplorer: A Framework for Cross-Stack Comparisons of Embedded Non-Volatile Memory Solutions
 
-    - **Lilian Pentecost** (Harvard)
-    - **Alexander Hankin** (Harvard)
-    - **Marco Donato** (Harvard)
-    - **Mark Hempstead** (Harvard)
+    - **Lilian Pentecost** (Amherst College)
+    - **Alexander Hankin** (Harvard / Intel)
+    - **Marco Donato** (Tufts)
+    - **Mark Hempstead** (Tufts)
     - **Gu-Yeon Wei** (Harvard)
     - **David Brooks** (Harvard)
 
