SRC: new deadlines, committee, clarification

--- a/pages/src.html
+++ b/pages/src.html
@@ -10,9 +10,9 @@
     ## Important Dates & Links
 
     - Extended Abstracts (800 words max; see full guidelines below)
-        - Due **September 1, 2022** (AoE: UTC-12)
+        - Due ~~September 1~~ **September 8, 2022** (AoE: UTC-12)
         - [Submission Site](https://pact22src.hotcrp.com/)
-    - Notification: September 15, 2022
+    - Notification: September 16, 2022
     - SRC Poster Session: October 11, 2022
     - SRC Finalist Presentation: October 12, 2022
 
@@ -74,10 +74,10 @@
 
     - Extended abstracts for the PACT 2022 ACM Student Research Competition
       must be submitted electronically at the [SRC submission site](https://pact22src.hotcrp.com/)
-      no later than September 1, 2022 (AoE).
+      no later than September 8, 2022 (AoE).
     - **Submissions should not exceed 1 page, and should not exceed 800 words.**
       Figures and references are allowed, but must fit within the single
-      page.
+      page. References do not count toward the 800-word limit.
     - The submission should be in PDF format.
     - Blind submissions are fine, but are not required.
     - The submission must meet all eligibility requirements below.
@@ -125,7 +125,23 @@
     ## Organization
 
     - **Chair:** Saugata Ghose (Univ. of Illinois Urbana-Champaign)
-    - **Selection Committee:** *to be determined*
+    - **Selection Committee:**
+        - Shoaib Akram (Australian National Univ.)
+        - Ramnatthan Alagappan (Univ. of Illinois Urbana-Champaign)
+        - Rachata Ausavarungnirun (King Mongkut's Univ. of Technology North Bangkok)
+        - Shuang Chen (Huawei)
+        - Jongouk Choi (Univ. of Central Florida)
+        - Udit Gupta (Harvard Univ.)
+        - Mark Jeffrey (Univ. of Toronto)
+        - Tze Meng Low (Carnegie Mellon Univ.)
+        - Kiwan Maeng (Meta AI; Pennsylvania State Univ.)
+        - Hoda Naghibijouybari (Binghamton Univ.)
+        - Elaheh Sadredini (Univ. of California, Riverside)
+        - Gururaj Saileshwar (NVIDIA Research)
+        - Muhammad Shahbaz (Purdue Univ.)
+        - Tyler Sorensen (Univ. of California, Santa Cruz)
+        - Swamit Tannu (Univ. of Wisconsin–Madison)
+        - Ana Lucia Varbanescu (Univ. of Amsterdam)
 
   {% endfilter %}
 {% endblock %}
