--- a/pages/src.html
+++ b/pages/src.html
@@ -10,7 +10,7 @@
     ## Important Dates & Links
 
     - Extended Abstracts (800 words max; see full guidelines below)
-        - Due ~~September 1~~ **September 8, 2022** (AoE: UTC-12)
+    - Due <del>September 1</del> **September 8, 2022** (AoE: UTC-12)
         - [Submission Site](https://pact22src.hotcrp.com/)
     - Notification: September 16, 2022
     - SRC Poster Session: October 11, 2022
