Make venue info more prominent

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -10,6 +10,19 @@
 
     (to be announced)
 
+    ## Venue
+
+    PACT 2022 will be held at the
+
+    [Discovery Partners Institute](https://dpi.uillinois.edu/contact/)<br>
+    200 South Wacker Drive<br>
+    Fourth Floor<br>
+    Chicago, IL 60606
+
+    Some sessions will be held at the [Illini
+    Center](https://illinicenter.illinois.edu/), located on the 19th Floor of
+    200 South Wacker Drive.
+
     ## Hotel Bookings
 
     At this moment, there is no specific hotel block for PACT. We recommend
