--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,8 @@
       <p class="lead">
         {% filter markdown %}
           {{ conf_dates }}<br>
-          [Discovery Partners Institute](https://dpi.uillinois.edu/contact/), Chicago, IL
+          [Discovery Partners Institute](https://dpi.uillinois.edu/contact/)<br>
+          200 S. Wacker Drive, Chicago, IL
         {% endfilter %}
       </p>
       <p class="lead">
