Open the gates, here they come

--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,7 @@
 
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
-        <a href="https://easychair.org/my/conference?conf=pact2022postersessio" class="btn btn-primary btn-lg px-4 me-md-2">Submit a Poster</a>
+        <a href="attend.html" class="btn btn-primary btn-lg px-4 me-md-2">Register</a>
         <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">Attend</a>
       </div>
     </div>
@@ -41,6 +41,9 @@
   {% filter markdown %}
     # News
 
+    * **September 5, 2022** Registration for PACT 2022 is now open.
+      See the [attendance information page](attend.html) for details
+      and to register.
     * **August 24, 2022:** Given that October 9 is the day of the
       Chicago Marathon, hotel bookings may be expensive.
       See the [attendance page](attend.html) for advice on
