Fix columns and anchors on program page

--- a/pages/program.html
+++ b/pages/program.html
@@ -8,9 +8,9 @@
     - [October 9: Tutorials and Workshops Day 2](#ws2)
     - [October 10: Main Conference Day 1](#main1)
     - [October 11: Main Conference Day 2](#main2)
-    - [October 12: Main Conference Day 2](#main3)
+    - [October 12: Main Conference Day 3](#main3)
 
-    <a name="ws1">
+    <a id="ws1"></a>
 
     ## Saturday, October 8, 2022
 
@@ -32,8 +32,7 @@
     how to exploit each of these principles to design a much more efficient and
     high performance computing system. We especially discuss recent research
     that aims to fundamentally reduce memory latency and energy, and
-    practically enable computation close to data, with at least two promising
-    novel directions: 1) processing using memory, which exploits analog
+    practically enable computation close to data, with at least two promising novel directions: 1) processing using memory, which exploits analog
     operational properties of memory chips to perform massively-parallel
     operations in memory, with low-cost changes, 2) processing near memory,
     which integrates sophisticated additional processing capability
@@ -93,7 +92,7 @@
     their interests.  See our webpage (<http://nvmexplorer.seas.harvard.edu/>)
     for details.
 
-    <a name="ws2">
+    <a id="ws2"></a>
 
     ## Sunday, October 9, 2022
 
@@ -156,7 +155,7 @@
     SYCL, we hope that the tutorial will be interesting and valuable to your
     work. 
 
-    <a name="main1">
+    <a id="main1"></a>
 
     ## Monday, October 10, 2022
 
@@ -200,7 +199,7 @@
 
     (Other talks to be announced)
 
-    <a name="main2">
+    <a id="main2"></a>
 
     ## Tuesday, October 11, 2022
 
@@ -248,7 +247,7 @@
 
     (Other talks to be announced)
 
-    <a name="main3">
+    <a id="main3"></a>
 
     ## Wednesday, October 12, 2022
 
