Add program news item

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,6 +41,8 @@
   {% filter markdown %}
     # News
 
+    * **September 12, 2022** The [technical program](program.html)
+      for the main conference has been announced. **Register now!**
     * **September 5, 2022** Registration for PACT 2022 is now open.
       See the [attendance information page](attend.html) for details
       and to register.
